# rust-learn

./: .gitignore
Ultimate-Rust-Crash-Course/ultimate_rust_crash_course-master/ultimate_rust_crash_course-master/exercise/f-structs-traits/src/: main.rs
Ultimate-Rust-Crash-Course/ultimate_rust_crash_course-master/ultimate_rust_crash_course-master/exercise/g-collections-enums/: Cargo.toml
Ultimate-Rust-Crash-Course/ultimate_rust_crash_course-master/ultimate_rust_crash_course-master/exercise/g-collections-enums/src/: main.rs
chapter-01/: Cargo.toml
chapter-01/src/: borrowing.rs  ownership.rs
chapter-02/src/: main.rs
chapter-03/src/: main.rs
chapter-04/src/: main.rs
chapter-05/: Cargo.toml
chapter-05/src/: main.rs
chapter-06/src/: main.rs
chapter-07/src/: main.rs
chapter-08/src/: main.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
